<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.madhapar.View.FeedbackActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_siz_large"
        android:id="@+id/etFeedbackName"
        android:layout_marginTop="@dimen/top_margin_large"
        android:layout_marginLeft="@dimen/text_siz_large"
        android:layout_marginRight="@dimen/text_siz_large"
        android:paddingLeft="@dimen/margin_small"
        android:background="@drawable/feedback"
        android:hint="@string/feedbackName"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_siz_large"
        android:id="@+id/etFeedbackMobile"
        android:layout_marginTop="@dimen/top_margin_large"
        android:digits="0987654321"
        android:inputType="phone"
        android:paddingLeft="@dimen/margin_small"
        android:layout_marginLeft="@dimen/text_siz_large"
        android:layout_marginRight="@dimen/text_siz_large"
        android:background="@drawable/feedback"
        android:hint="@string/feedbackMobile"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_siz_large"
        android:id="@+id/etFeedbackSubject"
        android:layout_marginTop="@dimen/top_margin_large"
        android:paddingLeft="@dimen/margin_small"
        android:layout_marginLeft="@dimen/text_siz_large"
        android:layout_marginRight="@dimen/text_siz_large"
        android:background="@drawable/feedback"
        android:hint="@string/feedbackSubject"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_button_width"
        android:id="@+id/etFeedbackFeedback"
        android:gravity="top"
        android:layout_marginTop="@dimen/top_margin_large"
        android:paddingLeft="@dimen/margin_small"
        android:layout_marginLeft="@dimen/text_siz_large"
        android:layout_marginRight="@dimen/text_siz_large"
        android:paddingTop="@dimen/margin_small"
        android:background="@drawable/feedback"
        android:hint="@string/feedback"
        android:singleLine="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_siz_large"
        android:layout_marginTop="@dimen/top_margin_large"
        android:layout_marginLeft="@dimen/text_siz_large"
        android:layout_marginRight="@dimen/text_siz_large"
        android:background="@color/colorPrimary"
        android:text="@string/feedbackSent"
        android:textColor="@color/colorWhite"/>
</LinearLayout>
