<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.madhapar.View.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarChangePassword"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvToolbarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text ="@string/changePasswordLabel"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/colorWhite"/>

    </android.support.v7.widget.Toolbar>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etChangeNewPassword"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginLeft="@dimen/activity_rightleft_login"
        android:layout_marginRight="@dimen/activity_rightleft_login"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:gravity="center"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etChangeConfirmNewPassword"
        android:layout_marginTop="@dimen/margin_top_large"
        android:layout_marginLeft="@dimen/activity_rightleft_login"
        android:layout_marginRight="@dimen/activity_rightleft_login"
        android:inputType="textPassword"
        android:hint="@string/confirmNewPassword"
        android:gravity="center"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_rightleft_login"
        android:layout_marginLeft="@dimen/activity_rightleft_login"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top_large">
        <Button
            android:layout_width="@dimen/btn_margin_forgetactivity"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:background="@drawable/loginbtn"/>

        <Button
            android:layout_width="@dimen/btn_margin_forgetactivity"
            android:layout_height="wrap_content"
            android:id="@+id/btnChnagePasswordCancel"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/signupbtn"/>
        </LinearLayout>
</LinearLayout>
