<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.madhapar.View.ForgetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_rightleft_login"
        android:layout_marginRight="@dimen/activity_rightleft_login"
        android:layout_marginTop="@dimen/margin_top_large"
        android:gravity="center"
        android:text="@string/textContact"
        android:textSize="@dimen/magin_large" />

    <EditText
        android:id="@+id/etForgetMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_rightleft_login"
        android:layout_marginRight="@dimen/activity_rightleft_login"
        android:layout_marginTop="@dimen/margin_top_large"
        android:gravity="left"
        android:hint="@string/mobileNumberLogin"
        android:inputType="phone"
        android:paddingLeft="@dimen/textMedeum"
        android:textColor="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_rightleft_login"
        android:layout_marginRight="@dimen/activity_rightleft_login"
        android:layout_marginTop="@dimen/margin_top_large"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/paddingForgetPass">

        <Button
            android:id="@+id/btnRecover"
            android:layout_width="@dimen/buttonrecover"
            android:layout_height="@dimen/CommentStatusChangeLayoutHeight"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1"
            android:background="@drawable/loginbtn"
            android:shadowDy="0"
            android:stateListAnimator="@null"
            android:text="@string/recover"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/buttonrecover"
            android:layout_height="@dimen/CommentStatusChangeLayoutHeight"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_weight="1"
            android:background="@drawable/loginbtn"
            android:shadowDy="0"

            android:stateListAnimator="@null"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>
