<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alertdialogdesign"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStatusDialogMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/EventAlertMessageTextHeight"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/activity_top_login_margin" />

        <EditText
            android:id="@+id/etStatusDialogCount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/EventAlertEditHeight"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/EventAlertButtonMargin"
            android:layout_marginRight="@dimen/EventAlertButtonMargin"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/EventAlertCountHint"
            android:inputType="number"
            android:padding="@dimen/margin_small"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAlertYesNo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_login_margin"
        android:layout_marginTop="@dimen/EventAlertButtonMargin"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvStatusDialogNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/EventAlertNo"
            android:textSize="@dimen/activity_top_login_margin" />

        <TextView
            android:id="@+id/tvStatusDialogYes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/EventAlertYes"
            android:textSize="@dimen/activity_top_login_margin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAlertCancelConform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_login_margin"
        android:layout_marginTop="@dimen/EventAlertButtonMargin"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvStatusDialogCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/EventAlertCancel"
            android:textSize="@dimen/activity_top_login_margin" />

        <TextView
            android:id="@+id/tvStatusDialogConfirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/EventAlertConfirm"
            android:textSize="@dimen/activity_top_login_margin" />

    </LinearLayout>


</LinearLayout>
