<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/mainalert"
    android:layout_height="match_parent"
    android:background="@drawable/alertdialogdesign"
    android:orientation="vertical"
    tools:context="com.madhapar.View.ForgetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_rightleft_login"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/enterOTP"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/activity_top_login_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/extraLargemargin"
        android:layout_marginRight="@dimen/extraLargemargin"
        android:layout_marginTop="@dimen/extraLargemargin"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etCode1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1" />

        <EditText
            android:id="@+id/etCode2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1" />

        <EditText
            android:id="@+id/etCode3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1" />

        <EditText
            android:id="@+id/etCode4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_login_margin"
        android:layout_marginTop="@dimen/extraLargemargin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvResendCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/resendOTP"
            android:textSize="@dimen/activity_top_login_margin" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/cancel"
            android:textSize="@dimen/activity_top_login_margin" />

    </LinearLayout>
</LinearLayout>
